model training and flask app
2nd PR

--- a/soccer_event/src/models/static/basic.css
+++ b/soccer_event/src/models/static/basic.css
@@ -20,3 +20,26 @@ body {
 }
 
 
+#button {
+  display: inline-block;
+  padding: 10px 15px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color:#6A4E07;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 5px #999;
+}
+
+#button:hover {background-color: #E0AA23}
+
+#button:active {
+  background-color:#E0AA23;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
